# dapr-project

./: Dockerfile  dapr.yaml  pyproject.toml
blogservice/: app.py  models.py
components/: pubsub.yaml
notifyservice/: app.py
userservice/: app.py
