[tool.poetry]
name = "dapr-project"
version = "0.1.0"
description = ""
authors = ["anubhuti24 <anubhutibhardwaj11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
